commit for deployement 2

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/OsmanBn/PortfolioReact",
+  "homepage": "https://OsmanBn.github.com/PortfolioReact",
   "name": "react-portfolio",
   "private": true,
   "version": "0.0.0",
